--- a/index.html
+++ b/index.html
@@ -31,18 +31,68 @@
         <article class="introducao-text">
           <h1>Crie algo
             <span class="impactante">impactante</span>
-            com música</h1>
+            com música
+          </h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua.</p>
-        <button class="btn-introducao">Comece Agora</button>
+          <button class="btn-introducao">Comece Agora</button>
         </article>
 
         <article>
           <img class="hero-img" src="img/hero-img.svg" alt="Hero img">
         </article>
       </section>
-    </main>
+      <div class="introducao-components">
 
+        <div class="components-top">
+          <img src="img/piano.png" alt="Piano">
+          <h2>Piano popular</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, dolore magna aliqua.</p>
+          <img class="arrow-right" src="img/arrow-right.svg" alt="Flecha direita">
+        </div>
+
+        <div class="components-bottom">
+          <img src="img/clef.png" alt="Piano">
+          <h2>Teoria musical</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, dolore magna aliqua.</p>
+          <img class="arrow-right" src="img/arrow-right.svg" alt="Flecha direita">
+        </div>
+
+        <div class="components-top">
+          <img src="img/sax.png" alt="Piano">
+          <h2>Sax alto</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, dolore magna aliqua.</p>
+          <img class="arrow-right" src="img/arrow-right.svg" alt="Flecha direita">
+        </div>
+
+        <div class="components-bottom">
+          <img src="img/drums.png" alt="Piano">
+          <h2>Bateria</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, dolore magna aliqua.</p>
+          <img class="arrow-right" src="img/arrow-right.svg" alt="Flecha direita">
+        </div>
+      </div>
+      <section class="conhecer">
+        <h1>E <span class="varios">vários</span> outros!</h1>
+        <button class="btn-conhecer">Conhecer Curso</button>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="logo">
+        <img src="img/logo.svg" alt="Tom's Jazz School'">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="lista">
+        <a href="#">Início</a>
+        <a href="#">Cursos</a>
+        <a href="#">Eventos</a>
+        <a href="#">Contato</a>
+      </div>
+      <div class="input">
+        <p>Receba materiais gratuitos no seu email</p>
+        <input type="email">
+      </div>
+    </footer>
   </div>
 </body>
 
