--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       <div class="input">
         <p>Receba materiais gratuitos no seu email</p>
         <input type="email">
+        <button class="btn-footer">Quero conhecer</button>
       </div>
     </footer>
   </div>
